# libreboot

./: .gitignore  Makefile  addseabios.mk  build.mk  buildrom-withgrub.mk  config.mk.in  configure.ac  flash_lenovobios_stage1  flash_lenovobios_stage2  flash_libreboot6  flash_macbook21applebios  flash_x60_libreboot5  get  grub-mkstandalone.mk  macbook21_firstflash  modules.mk  powertop.trisquel6  powertop.trisquel7  source-locations.sh  x60flashfrom5
Makefile.d/: .gitignore  addseabios.mk  build-release.mk  build.mk  buildrom-withgrub.mk  downloader  grub-mkstandalone.mk  modules.mk
Makefile.d/modules/: bucts.mk  coreboot.mk  dejavu.mk  flashrom.mk  grub.mk  grubinvaders.mk  i945pwm.mk  memtest86.mk  powertop.mk  seabios.mk
resources/coreboot/patch/: DEBLOB
resources/grub/config/: grub_memdisk.cfg
resources/grub/config/extra/: vesafb.cfg
resources/grub/config/menuentries/: common.cfg  txtmode.cfg
resources/grub/font/: .gitignore
resources/libreboot/config/: .gitignore  COPYING
resources/libreboot/config/grub/x60/: config
resources/libreboot/patch/misc/: 0010-Needs-Testing-VGA-and-GM45-textmode-fixes.patch
resources/scripts/helpers/download/: coreboot
resources/utilities/grub-assemble/: functions.sh  gen.sh  modules.conf
resources/utilities/grub-assemble/keymap/: .gitignore  COPYING
